# app/serializers/pokemon_serializer.rb
@@ -1,0 +1,5 @@
+# frozen_string_literal: true
+
+class PokemonSerializer < ActiveModel::Serializer
+  attributes :id, :name, :p_type, :hp, :moves, :available
+end
